fixed text wrapping issue for long messages on other user side

--- a/client/src/components/Texts.css
+++ b/client/src/components/Texts.css
@@ -11,7 +11,7 @@
     flex-direction: row;
     margin: auto;
     margin-left: 50%;
-    width: fit-content;
+    
 }
 
 .otherText {
@@ -20,9 +20,12 @@
     border-radius: 40px;
     margin-bottom: 10px;
     text-align: left;
-    position: relative;
-    padding: 30px;
-    display: grid;
+    padding: 20px;
+    display: block;
+    margin-bottom: 10px;
+    text-align: left;
+    width: fit-content;
+    max-width: 250px;
     word-wrap: break-word;
     margin-left: 50px;
 }
@@ -36,13 +39,12 @@
 .ownText {
     list-style-type: none;
     background-color: grey;
-    padding: 30px;
+    padding: 20px;
     border-radius: 40px;
     float: right;
     margin-left: -50%;
     margin-bottom: 10px;
     text-align: left;
-    position: relative;
     width: fit-content;
     max-width: 250px;
     word-wrap: break-word;
